<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fitnesapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/achievementFragment"
        android:name="com.example.fitnesapp.ui.achievements.DashboardFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fitnesapp.ui.progress.NotificationsFragment"
        android:label="@string/title_achievements"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/sleepFragment"
        android:name="com.example.fitnesapp.ui.sleep.SleepFragment"
        android:label="@string/text_sleep"
        tools:layout="@layout/fragment_sleep" />
    <fragment
        android:id="@+id/pulseFragment"
        android:name="com.example.fitnesapp.ui.pulse.PulseFragment"
        android:label="@string/text_pulse"
        tools:layout="@layout/fragment_pulse" />
    <fragment
        android:id="@+id/weightFragment"
        android:name="com.example.fitnesapp.ui.weight.WeightFragment"
        android:label="@string/text_weight"
        tools:layout="@layout/fragment_weight" />
    <fragment
        android:id="@+id/oxygenFragment"
        android:name="com.example.fitnesapp.ui.oxygenlevel.OxygenFragment"
        android:label="@string/text_oxygenLvl"
        tools:layout="@layout/fragment_oxygen" />
    <fragment
        android:id="@+id/activeTrenFragment"
        android:name="com.example.fitnesapp.ui.activetren.ActiveTrenFragment"
        android:label="@string/text_training"
        tools:layout="@layout/fragment_active_tren" />
    <fragment
        android:id="@+id/dayActivityFragment"
        android:name="com.example.fitnesapp.ui.dayactivity.DayActivityFragment"
        android:label="@string/text_day_activity"
        tools:layout="@layout/fragment_day_activity" />
    <fragment
        android:id="@+id/historyAchievementsFragment"
        android:name="com.example.fitnesapp.ui.historyachievements.historyAchievementsFragment"
        android:label="fragment_history_achievements"
        tools:layout="@layout/fragment_history_achievements" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.fitnesapp.ui.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>