<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.achievements.AchievementsFragment">

    <HorizontalScrollView
        android:id="@+id/scrollTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/tabsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <RadioButton
                android:id="@+id/tabRecommended"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/selector_tab_bg"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/achievements_recommended"
                android:textColor="@drawable/selector_tab_text" />

            <RadioButton
                android:id="@+id/tabCollections"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/selector_tab_bg"
                android:button="@null"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/achievements_collections"
                android:textColor="@drawable/selector_tab_text" />

            <RadioButton
                android:id="@+id/tabMilestones"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/selector_tab_bg"
                android:button="@null"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/achievements_milestones"
                android:textColor="@drawable/selector_tab_text" />

            <RadioButton
                android:id="@+id/tabLegendary"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:background="@drawable/selector_tab_bg"
                android:button="@null"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/achievements_legendary"
                android:textColor="@drawable/selector_tab_text" />

        </RadioGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAchievements"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="1dp"
        android:clipToPadding="false"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollTabs" />

</androidx.constraintlayout.widget.ConstraintLayout>